[project]
name = "vllm-learning-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.14.4",
    "evaluate>=0.4.6",
    "fastapi>=0.124.4",
    "numpy<2",
    "sse-starlette>=3.1.2",
    "timm>=1.0.22",
    "torch==2.2.2",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.40.0",
]
